--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <title>Fipe por Fipe Web</title>
   </head>
@@ -50,6 +50,12 @@
         <p v-if="comparedValue">Diferença de valor: {{ comparedValue }}</p>
         <br />
         <canvas class="chart" width="400" height="400" id="fipeChart"></canvas>
+      </div>
+      <br/>
+      <div align="center">
+        <a href="https://play.google.com/store/apps/details?id=br.com.alloy.android.fipeporfipe" target="_blank">
+          <img src="img/google-play-badge.png" alt="Android App" />
+        </a>
       </div>
     </div>
     <script src="js/fipeporfipe.js"></script>
