--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="js/vuejs.3.2.37.prod.js"></script>
     <script src="https://www.tabelafipebrasil.com/api/js/tabelafipe-widget.min.js"></script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9289897309652492"
-     crossorigin="anonymous"></script>
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9289897309652492"
+      crossorigin="anonymous"
+    ></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.8.0/chart.min.js"
       integrity="sha512-sW/w8s4RWTdFFSduOTGtk4isV1+190E/GghVffMA9XczdJ2MDzSzLEubKAs5h0wzgSJOQTRYyaz73L3d6RtJSg=="
@@ -24,35 +27,41 @@
   </head>
   <body>
     <div id="app">
-      <h3>{{ appTitle }}</h3>
-      <p>Veículo A</p>
-      <div id="veiculoA" class="tfb-query" data-style="1"></div>
-      
-      <!-- banner FPF Web -->
-      <ins
-        class="adsbygoogle"
-        style="display: block"
-        data-ad-client="ca-pub-9289897309652492"
-        data-ad-slot="6569207733"
-        data-ad-format="auto"
-        data-full-width-responsive="true"
-      ></ins>
-      <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
+      <div class="row">
+        <h3>{{ appTitle }}</h3>
+      </div>
+      <div class="row">
+        <div id="veiculoA" class="tfb-query card blue" data-style="1"></div>
+      </div>
 
-      <p>Veículo B</p>
-      <div id="veiculoB" class="tfb-query" data-style="1"></div>
-      <div class="tfb-stylebase">
+      <div class="row">
+        <!-- banner FPF Web -->
+        <ins
+          class="adsbygoogle"
+          style="display: block"
+          data-ad-client="ca-pub-9289897309652492"
+          data-ad-slot="6569207733"
+          data-ad-format="auto"
+          data-full-width-responsive="true"
+        ></ins>
+        <script>
+          (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+      </div>
+
+      <div class="row">
+        <div id="veiculoB" class="tfb-query card red" data-style="1"></div>
+      </div>
+      <div class="row">
         <button @click="compareVehicles()">Comparar Veículos</button>
-        <br />
-        <br />
-        <p v-if="comparedValue">Diferença de valor: {{ comparedValue }}</p>
-        <br />
+      </div>
+      <div class="row" v-if="comparedValue">
+        <p>Diferença de valor: {{ comparedValue }}</p>
+      </div>
+      <div class="row">
         <canvas class="chart" width="400" height="400" id="fipeChart"></canvas>
       </div>
-      <br/>
-      <div align="center">
+      <div class="row">
         <a href="https://play.google.com/store/apps/details?id=br.com.alloy.android.fipeporfipe" target="_blank">
           <img src="img/google-play-badge.png" alt="Android App" />
         </a>
