inclusão de tags no head do app e ajuste das cores

--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="Robots" content="index,follow" />
+    <meta
+      name="author"
+      content="João Gabriel Messi Lutz (joaolutz.github.io)"
+    />
+    <meta
+      name="description"
+      content="Fipe por Fipe Web App - Aplicativo para comparação de valores de veículos da tabela Fipe."
+    />
     <script src="js/vuejs.3.2.37.prod.js"></script>
     <script src="https://www.tabelafipebrasil.com/api/js/tabelafipe-widget.min.js"></script>
     <script
@@ -32,7 +41,7 @@
       </div>
 
       <div class="row">
-        <div class="card">
+        <div id="appDescription" class="card">
           <p>
             O aplicativo Fipe por Fipe foi desenvolvido para quem quer pesquisar
             os valores de veículos da tabela Fipe e fazer comparações entre
