--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     />
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
-    <title>Fipe por Fipe Web</title>
+    <title>Fipe por Fipe Web App</title>
   </head>
   <body>
     <div id="app">
