Adicionado string de versão do app

--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
           <img src="img/google-play-badge.png" alt="Android App" />
         </a>
       </div>
+      <div class="row">
+        <p>Versão do app: {{ appVersion }}</p>
+      </div>
     </div>
     <script src="js/fipeporfipe.js"></script>
   </body>
