atualização da descrição do app

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             veículos.
             <br />
             <br />
-            O aplicativo utiliza a API de terceiro do site TabelaFipeBrasil, o
+            O aplicativo utiliza a API disponibilizada pelo site <a href="https://www.tabelafipebrasil.com/api/" target="_blank">TabelaFipeBrasil</a>, o
             que garante os preços atualizados em tempo real com a última tabela
             disponível no site oficial.
           </p>
