app migrado para vuejs cli

--- a/index.html
+++ b/index.html
@@ -1,121 +1,1 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="Robots" content="index,follow" />
-    <meta
-      name="author"
-      content="João Gabriel Messi Lutz (joaolutz.github.io)"
-    />
-    <meta
-      name="description"
-      content="Fipe por Fipe Web App - Aplicativo para comparação de valores de veículos da tabela Fipe."
-    />
-    <script src="js/vuejs.3.2.37.prod.js"></script>
-    <script src="https://www.tabelafipebrasil.com/api/js/tabelafipe-widget.min.js"></script>
-    <script
-      async
-      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9289897309652492"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.8.0/chart.min.js"
-      integrity="sha512-sW/w8s4RWTdFFSduOTGtk4isV1+190E/GghVffMA9XczdJ2MDzSzLEubKAs5h0wzgSJOQTRYyaz73L3d6RtJSg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
-    <title>Fipe por Fipe Web App</title>
-  </head>
-  <body>
-    <div id="app">
-      <div class="row">
-        <h3>{{ appTitle }}</h3>
-      </div>
-
-      <div class="row">
-        <div id="appDescription" class="card">
-          <p>
-            O aplicativo Fipe por Fipe foi desenvolvido para quem quer pesquisar
-            os valores de veículos da tabela Fipe e fazer comparações entre
-            esses valores.
-            <br />
-            <br />
-            O processamento do aplicativo gera dois resultados:
-            <br />
-            - O valor da diferença entre os preços dos veículos (maior - menor)
-            <br />
-            - Um gráfico com os valores para melhor visualização
-            <br />
-            <br />
-            O comparativo é um diferencial exclusivo do app Fipe por Fipe, que
-            foi feito pensando nos negociadores de veículos novos e usados, onde
-            é comum ouvir a expressão "Fipe por Fipe", quando os valores da
-            tabela oficial da Fipe serão considerados numa negociação de
-            veículos.
-            <br />
-            <br />
-            O aplicativo utiliza a API disponibilizada pelo site <a href="https://www.tabelafipebrasil.com/api/" target="_blank">TabelaFipeBrasil</a>, o
-            que garante os preços atualizados em tempo real com a última tabela
-            disponível no <a href="https://veiculos.fipe.org.br/" target="_blank">site oficial da Fipe</a>.
-          </p>
-        </div>
-      </div>
-
-      <div class="row">
-        <div id="veiculoA" class="tfb-query card blue" data-style="1"></div>
-      </div>
-
-      <div class="row">
-        <!-- banner FPF Web -->
-        <ins
-          class="adsbygoogle"
-          style="display: block"
-          data-ad-client="ca-pub-9289897309652492"
-          data-ad-slot="6569207733"
-          data-ad-format="auto"
-          data-full-width-responsive="true"
-        ></ins>
-        <script>
-          (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
-      </div>
-
-      <div class="row">
-        <div id="veiculoB" class="tfb-query card red" data-style="1"></div>
-      </div>
-
-      <div class="row">
-        <button @click="compareVehicles()">Comparar Veículos</button>
-      </div>
-
-      <div class="row" v-if="comparedValue">
-        <p>Diferença de valor: {{ comparedValue }}</p>
-      </div>
-
-      <div class="row">
-        <canvas class="chart" width="400" height="400" id="fipeChart"></canvas>
-      </div>
-
-      <div class="row">
-        <a
-          href="https://play.google.com/store/apps/details?id=br.com.alloy.android.fipeporfipe"
-          target="_blank"
-        >
-          <img src="img/google-play-badge.png" alt="Android App" />
-        </a>
-      </div>
-      <div class="row">
-        <p>Versão do app: {{ appVersion }}</p>
-      </div>
-    </div>
-    <script src="js/fipeporfipe.js"></script>
-  </body>
-</html>
+<!doctype html><html lang="pt-BR"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="Robots" content="index,follow"/><meta name="author" content="João Gabriel Messi Lutz (joaolutz.github.io)"/><meta name="description" content="Fipe por Fipe Web App - Aplicativo para comparação de valores de veículos da tabela Fipe."/><script src="https://www.tabelafipebrasil.com/api/js/tabelafipe-widget.min.js"></script><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9289897309652492" crossorigin="anonymous"></script><link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet"/><link rel="shortcut icon" type="image/x-icon" href="./favicon.ico"/><title>Fipe por Fipe Web App</title><script defer="defer" src="/js/chunk-vendors.0b611bf9.js"></script><script defer="defer" src="/js/app.5794257b.js"></script><link href="/css/app.760717b8.css" rel="stylesheet"></head><body><noscript><strong>O app Fipe por Fipe não funciona corretamente sem o Javascript habilitado. Por favor habilite para continuar.</strong></noscript><div id="app"></div><script>(adsbygoogle = window.adsbygoogle || []).push({});</script></body></html>
