--- a/app/public/index.html
+++ b/app/public/index.html
@@ -1,17 +1,38 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="pt-BR">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <meta name="Robots" content="index,follow" />
+    <meta
+      name="author"
+      content="João Gabriel Messi Lutz (joaolutz.github.io)"
+    />
+    <meta
+      name="description"
+      content="Fipe por Fipe Web App - Aplicativo para comparação de valores de veículos da tabela Fipe."
+    />
+    <script src="https://www.tabelafipebrasil.com/api/js/tabelafipe-widget.min.js"></script>
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9289897309652492"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
+    <title>Fipe por Fipe Web App</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>O app Fipe por Fipe não funciona corretamente sem o Javascript habilitado. Por favor habilite para continuar.</strong>
     </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
   </body>
 </html>
